@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2014 BEA Systems, Inc. and others
+ * Copyright (c) 2005, 2016 BEA Systems, Inc. and others
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -136,7 +136,7 @@ public class MirrorDeclarationTestAnnotationProcessor extends BaseProcessor {
         ProcessorTestStatus.assertTrue("position should be null", posVS == null); // the anno is declared in binary - no AST.
         AnnotationValue valueInt = elementInt.getDefaultValue();
         ProcessorTestStatus.assertEquals("", "bob", valueString.getValue());
-        ProcessorTestStatus.assertEquals("", new Integer(3), valueInt.getValue());
+        ProcessorTestStatus.assertEquals("", Integer.valueOf(3), valueInt.getValue());
         ProcessorTestStatus.assertEquals("", "\"bob\"", valueString.toString());
         ProcessorTestStatus.assertEquals("", "3", valueInt.toString());
 	}
