@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2005, 2014 IBM Corporation and others.
+ * Copyright (c) 2005, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -1572,7 +1572,7 @@ int rankForState(State state) {
 	if (ranksForStates == null) {
 		ranksForStates = new HashMap(length = truthTableRowNames.length);
 		for (int i = 0; i < length; i++) {
-			ranksForStates.put(truthTableRowNames[i], new Integer(i));
+			ranksForStates.put(truthTableRowNames[i], Integer.valueOf(i));
 		}
 	}
 	Integer rank;
