@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -163,7 +163,7 @@ public class ASTRewritingTest extends AbstractJavaModelTests {
 						for (int j= 0; j < JLS_LEVELS.length; j++) {
 							int level = JLS_LEVELS[j];
 							if (level >= since && level >= classSince) {
-								suite.addTest((Test) cons.newInstance(new Object[]{name, new Integer(level)}));
+								suite.addTest((Test) cons.newInstance(new Object[]{name, Integer.valueOf(level)}));
 							}
 						}
 					}
